Changes for version 2.1.0 rc2
--------------------------------------------------------------------
- Quite a few bug fixes, including the intermittant deadlock when
  switching streams.
- Very prelimininary Fairtunes tipping integration.

Changes for Linux and Windows version 2.1.0 rc1
--------------------------------------------------------------------
- The playlist can now be customized to change/reorder the fields that are 
  shown. (win32 patch contributed by Steve Kemp)
- ORBit-based corba UI contributed by Martin Enlund
- Almost completely functional QNX port! see README.qnx
- The IRIX port is almost running...
- The Solaris port works again (on solaris 7, at least)
- The Relatable features now work behind proxy servers.

Changes for Linux and Windows version 2.1.0 beta 9
--------------------------------------------------------------------

- Added support for changing the volume with the mouse wheel in windows.
- The average vorbis bitrate is updated every 3 seconds.
- Updated to the latest and greatest Vorbis code.
- Added support for reading Vorbis metadata. No write support yet.
- Fixed a bug where FreeAmp would keep playing some tracks indefinitely
- Fixed a win32 bug where FreeAmp crashed when it loaded a playlist that
  has a track missing.
- Fixed the long startup time when not connected to the 'net and a Releatable
  profile was enabled.
- bunches of memory leaks plugged.
- (Hopefully) fixed DnD on some Win98 boxes.
- Added a link button to the Edit Track Info dialog that goes to the track's
  page at musicbrainz.
- Sort additions to the playlist from the music tree properly.
- Try to grab track numbers from the filename.
- Enhancements to the GTK My Music.
- Save -20dB equalizer settings properly.
- Bunches of little fixes to the Win32 My Music, mostly involving DnD.
- Don't read tags from files that they don't need to be read on.
- SoundsLike recommendations

Changes for Linux and Windows version 2.1.0 beta 8